# sistema-autorizacao-compra

./: .gitignore  README.md  pyproject.toml
src/: db_manager.py  gerarpdf.py  main.py  utils_path.py  utils_ui.py
src/views/: cadastros.py  fornecedores.py  historico.py
storage/: dados_usuario.json
