[project]
name = "autcomprasystem"
version = "0.1.2"
description = "Aplicativo para emissão de autorização de compra com modo offline e sincronização cloud"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Gideão Figueiredo", email = "gideao.figueiredo@hotmail.com" }
]
dependencies = [
  "flet>=0.80.2",
  "gspread", # Utilizado em main.py para integração com Google Sheets
  "fpdf2", # Utilizado em gerarpdf.py para criação dos documentos
]

[dependency-groups]
dev = [
  "flet[all]>=0.80.2",
]

[tool.flet]
org = "com.mycompany"
product = "autcompra"
company = "Flet"
copyright = "Copyright (C) 2026 by Flet"

[tool.flet.app]
path = "src"
